--- a/index.html
+++ b/index.html
@@ -2,10 +2,11 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Latihan Box Model</title>
-    <link rel="stylesheet" href="../css/style.css">
+    <title>Marsha Oshi</title>
+    <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
+    <!-- header start-->
     <div class="top-bar">
         <div class="header">
             <h1 class="judul">Marsha Oshi</h1>
@@ -13,18 +14,19 @@
         <a href="index.html" class="logo">logo</a>
         <ul>
             <li><a href="index.html">HOME</a></li>
-            <li><a href="gallery.html">GALLERY</a></li>
+            <li><a href="#">GALLERY</a></li>
             <li><a href="#">SCHEDULE</a></li>
             <li><a href="#">ARTICLE</a></li>
-            <li><a href="contact.html">ABOUT US</a></li>
+            <li><a href="#">ABOUT US</a></li>
         </ul>
     </div>
+    <!-- header end -->
     <div class="container">
         
         <div class="hero"></div>
         <div class="content cf">
             <div class="bio">
-                <img src="../img/pc.jpg" alt="Marsha">
+                <img src="img/pc.jpg" alt="Marsha">
                 <h1>Marsha Lenathea</h1>
                 <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Fugiat nisi aliquam iure obcaecati illo? Quasi ex quibusdam, esse sunt provident explicabo hic quas ut cum nemo at, architecto accusamus recusandae.</p>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Impedit quia commodi architecto. Maxime saepe nisi distinctio magni asperiores consequatur, nostrum cum dignissimos atque dolorem neque voluptatem possimus perspiciatis reprehenderit quas?</p>
@@ -46,9 +48,12 @@
                 <!-- <br><br><br><br><br> -->
             </div>
         </div>
-        <div class="footer">
-            <p class="copy">Made With Love</p>
-        </div>
+    
     </div>
+    <!-- footer start -->
+    <div class="footer">
+        <p class="copy">Made With Love</p>
+    </div>
+    <!-- footer end -->
 </body>
 </html>
