--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <a href="index.html" class="logo">logo</a>
         <ul>
             <li><a href="index.html">HOME</a></li>
-            <li><a href="#">GALLERY</a></li>
+            <li><a href="gallery.html">GALLERY</a></li>
             <li><a href="#">SCHEDULE</a></li>
             <li><a href="#">ARTICLE</a></li>
             <li><a href="#">ABOUT US</a></li>
